@@ -1,0 +1,7 @@
+[info]
+author = limodou
+date = 2007-08-25
+version = "1.0"
+description = "svn support"
+homepage = 
+
