@@ -4,6 +4,8 @@ DirBrowser.py SvnSupport.py mRun.py
                     Add refreshing current folder functionality after the svn 
                     command finished
 mSearch.py          Fix Ctrl+B bug. The position is not the right, it's less 1.
+svn_plugin          Make svn support a plugin, so if you want to use svn, you
+                    should enable the svn_plugin first.
                     
 [2007/08/24]
 Editor.py           Add Ctrl+Insret => Copy, and add Ctrl+C, Ctrl+X, Ctrl+Y to
